# problem-solving

./: .gitignore  README.md  main.py  pyproject.toml
arrays_101/: storing_dvds.py
problems/arrays_101/: duplicate_zeros.py  dvd.py  even_number_digits.py  find_disappeared.py  find_largest.py  height_checker.py  max_ones.py  merge_sorted_array.py  move_zeros.py  n_and_its_double.py  remove_duplicates_from_sorted_array.py  remove_element.py  remove_element1.py  replace_greatest_element.py  sort_array.py  square_even_index.py  squares_of_sorted_array.py  valid_mountain_arry.py
src/leetcode/arrays_101/: check_if_n_and_its_double_exists.py  duplicate_zeros.py  merge_sorted_array.py  remove_duploicates_from_sorted_array.py  remove_element.py  valid_mountain_array.py
src/leetcode/arrays_101/introduction/: dvd.py  max_consecutive_ones.py  numbers_with_even_digits.py  squares_of_sorted_array.py
src/problem_solving/arrays_101/: array_example.py  count_numbers_with_even_digits.py  find_numbers_with_even_number_of_digits.py  max_consecutive_ones.py
src/problem_solving/beginners_guide/challenge_problems/: problem_1342.py  problem_1480.py  problem_1672.py  problem_412.py
src/problem_solving/decorators/: preformance.py
tests/problem_solving/arrays_101/: test_count_numbers_with_even_digits.py  test_max_consecutive_ones.py  test_numbers_with_even_digits.py
tests/problems/arrays_101/: test_duplicate_zeros.py  test_dvd.py  test_max_ones.py  test_merge_sorted_array.py  test_numbers_with_even_digits.py  test_squares_of_sorted_array.py
(+4 files in other folders)
